Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- [OPTIM]: fixed abusive use of objectIds() in local voc lookup
- #1730: Calendar widget not working fine when language is Catalan
- Made it possible to create empty vocabularies through the use of
  the CPSInstaller verifyVocabularies method.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Moved jscalendar lang/ subdir to calendar-lang/ to avoid name collisions.
- moved BasicWidget.renderHtmlTag to CPSUtil.html