@@ -46,6 +46,12 @@
   <five:traversable
       class=".VocabulariesTool.VocabulariesTool"/>
 
+  <five:traversable
+      class=".Vocabulary.CPSVocabulary"/>
+
+  <five:traversable
+      class=".MethodVocabulary.MethodVocabulary"/>
+
   <configure package="Products.GenericSetup.browser">
 
     <browser:page
